# ComputerGraphics

./: .gitignore  CMakeLists.txt  PlanetaryMaths.cpp  README.md  RGB.cpp  RGB.h  main.cpp
PathTracer/: CMakeLists.txt  LICENSE  main.cpp
PathTracer/geometry/: CollisionObject.h  Ray.h  Sphere.cpp  Sphere.h  TriangleMeshes.cpp
PathTracer/geometry/models/: untitled.mtl
PathTracer/imaging/: DotLight.h  Image.cpp  RGB.h
PathTracer/material/: Composite.h  Material.h  Phong.h  RefractionPerfect.h
PathTracer/maths/: Matrix.cpp  Matrix.h  Vector.cpp
PathTracer/render/: Scene.cpp  Screen.cpp  tracer.cpp  tracer.h
PathTracer/utils/: IOppm.cpp  IOppm.h  Prng.h
PhotonMapping/: .gitignore  README.txt
PhotonMapping/SmallPM/include/: KDTree.h  PhotonMapping.h
PhotonMapping/SmallPM/src/: PhotonMapping.cpp  main.cpp
PhotonMapping/VS2013/: SmallPM.vcxproj
PhotonMapping/VS2015/: SmallPM.sln  SmallPM.vcxproj  name_file.hdr
PhotonMapping/VS2017/: SmallPM.vcxproj  SmallPM.vcxproj.filters
geometry/: AABB.cpp  AABB.h  CollisionObject.h  Disk.cpp  Disk.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMeshes.cpp  TriangleMeshes.h  ray.cpp  ray.h
geometry/models/: cube.obj.3D  men.obj.3D  player.obj.3D  text.mtl  text.obj.3D
imaging/: DotLight.cpp  DotLight.h  Image.h  RGB.cpp  RGB.h  ToneMapper.cpp  ToneMapper.h
material/: Composite.h  Emitter.cpp  Emitter.h  Material.h  Phong.h  RefractionPerfect.h  SpecularPerfect.h
maths/: Matrix.cpp  Matrix.h  RGB.h  Vector.cpp  Vector.h  maths.md
render/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  tracer.cpp  tracer.h
utils/: BVH.cpp  BVH.h  IOppm.cpp  IOppm.h  PlanetaryMaths.h
(+1 files in other folders)
